--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "asop": "^0.0.4",
+    "debug": "^3.1.0",
     "glob": "^7.1.2",
     "handlebars": "^4.0.11",
+    "http-errors": "^1.6.3",
     "koa": "^2.5.0",
     "koa-body": "^2.5.0",
     "koa-logger": "^3.2.0",
@@ -14,6 +17,8 @@
     "koa-static": "^4.0.2",
     "koa-views": "^6.1.4",
     "less-middleware": "^2.2.1",
-    "sqlite3": "^4.0.0"
+    "path-to-regexp": "^2.2.0",
+    "sqlite3": "^4.0.0",
+    "url-search-params": "^0.10.0"
   }
 }
