--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "glob": "^7.1.2",
     "handlebars": "^4.0.11",
     "http-errors": "^1.6.3",
+    "is-prototype-of": "^0.0.1",
+    "knex": "^0.14.5",
     "koa": "^2.5.0",
     "koa-body": "^2.5.0",
     "koa-logger": "^3.2.0",
@@ -17,7 +19,9 @@
     "koa-static": "^4.0.2",
     "koa-views": "^6.1.4",
     "less-middleware": "^2.2.1",
+    "objection": "^1.1.3",
     "path-to-regexp": "^2.2.0",
+    "sequelize": "^4.37.6",
     "sqlite3": "^4.0.0",
     "url-search-params": "^0.10.0"
   }
